prevent coap to stop ant from building

--- a/extensions/coap/nbproject/project.properties
+++ b/extensions/coap/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=coap
-application.vendor=stefanopiozingaro
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -27,8 +26,8 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/coap.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
+file.reference.coap-src=src
 file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
 jar.compress=false
@@ -40,7 +39,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=false
+javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -57,7 +56,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.netty.jar=../../lib/netty-all-4.1.17.Final-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -66,7 +64,6 @@ main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-native.bundling.enabled=true
 platform.active=default_platform
 project.jolie=../../jolie
 project.jolie-js=../../lib/jolie-js
@@ -85,6 +82,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.netty.jar=../../lib/netty-all-4.1.17.Final-sources.jar
-src.dir=src
-test.src.dir=test
+src.dir=${file.reference.coap-src}
