--- a/extensions/coap/nbproject/private/private.properties
+++ b/extensions/coap/nbproject/private/private.properties
@@ -1,6 +1,2 @@
-compile.on.save=false
-do.depend=false
-do.jar=true
-javac.debug=true
-javadoc.preview=true
+compile.on.save=true
 user.properties.file=/Users/stefanozingaro/Library/Application Support/NetBeans/8.2/build.properties
