maybe fix of dist install error in datagram

--- a/extensions/datagram/nbproject/project.properties
+++ b/extensions/datagram/nbproject/project.properties
@@ -27,7 +27,8 @@ dist.dir=dist
 dist.jar=${dist.dir}/datagram.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.netty.jar=../../dist/jolie/lib/netty.jar
+file.reference.datagram-src=src
+file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -57,9 +58,10 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=true
+mkdist.disabled=false
 platform.active=default_platform
 project.jolie=../../jolie
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
@@ -74,5 +76,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+src.dir=${file.reference.datagram-src}
