--- a/build.xml
+++ b/build.xml
@@ -356,6 +356,10 @@ Please make sure that:
 		<copy file="${libs.smackx}" tofile="${dist.jolie}/lib/smackx.jar"/>
 		<copy file="${libs.commons-lang3}" tofile="${dist.jolie}/lib/commons-lang3.jar"/>
 		<copy file="${libs.uri-templates}" tofile="${dist.jolie}/lib/uri-templates.jar"/>
+    <copy file="${libs.c3p0-0.9.1.1}" tofile="${dist.jolie}/lib/c3p0-0.9.1.1.jar"/>
+    <copy file="${libs.quartz-2.2.1}" tofile="${dist.jolie}/lib/quartz-2.2.1.jar"/>
+    <copy file="${libs.quartz-jobs-2.2.1}" tofile="${dist.jolie}/lib/quartz-jobs-2.2.1.jar"/>
+    <copy file="${libs.slf4j-api-1.6.6}" tofile="${dist.jolie}/lib/slf4j-api-1.6.6.jar"/>
 
 		<antcall target="-create-unix-launchers" />
 		<antcall target="-create-windows-launchers" />
