--- a/buildconfig/config.properties
+++ b/buildconfig/config.properties
@@ -29,3 +29,7 @@ libs.smack=lib/xmpp/smack.jar
 libs.smackx=lib/xmpp/smackx.jar
 libs.commons-lang3=lib/commons-lang/commons-lang3.jar
 libs.uri-templates=lib/uri-templates/uri-templates.jar
+libs.c3p0-0.9.1.1=lib/quartz/c3p0-0.9.1.1.jar
+libs.quartz-2.2.1=lib/quartz/quartz-2.2.1.jar
+libs.quartz-jobs-2.2.1=lib/quartz/quartz-jobs-2.2.1.jar
+libs.slf4j-api-1.6.6=lib/quartz/slf4j-api-1.6.6.jar
