modifications of project properties for including quartz libraries

--- a/javaServices/coreJavaServices/nbproject/project.properties
+++ b/javaServices/coreJavaServices/nbproject/project.properties
@@ -28,10 +28,10 @@ file.reference.c3p0-0.9.1.1.jar=../../lib/quartz/c3p0-0.9.1.1.jar
 file.reference.commons-lang3.jar=../../lib/commons-lang/commons-lang3.jar
 file.reference.ini4j.jar=../../lib/ini4j/ini4j.jar
 file.reference.jolieJavaServices-src=src
-file.reference.jta-1.1.jar=../../lib/quartz/jta-1.1.jar
 file.reference.mailapi.jar=../../lib/javamail/mailapi.jar
-file.reference.quartz-2.0.0.jar=../../lib/quartz/quartz-2.0.0.jar
-file.reference.slf4j-api-1.6.1.jar=../../lib/quartz/slf4j-api-1.6.1.jar
+file.reference.quartz-2.2.1.jar=../../lib/quartz/quartz-2.2.1.jar
+file.reference.quartz-jobs-2.2.1.jar=../../lib/quartz/quartz-jobs-2.2.1.jar
+file.reference.slf4j-api-1.6.6.jar=../../lib/quartz/slf4j-api-1.6.6.jar
 file.reference.smack.jar=../../lib/xmpp/smack.jar
 file.reference.smackx.jar=../../lib/xmpp/smackx.jar
 file.reference.smtp.jar=../../lib/javamail/smtp.jar
@@ -49,9 +49,6 @@ javac.classpath=\
     ${reference.jolie-xml.jar}:\
     ${file.reference.ini4j.jar}:\
     ${file.reference.c3p0-0.9.1.1.jar}:\
-    ${file.reference.jta-1.1.jar}:\
-    ${file.reference.quartz-2.0.0.jar}:\
-    ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.smack.jar}:\
     ${file.reference.smackx.jar}:\
     ${file.reference.wsdl4j.jar}:\
@@ -59,10 +56,14 @@ javac.classpath=\
     ${file.reference.commons-lang3.jar}:\
     ${reference.http.jar}:\
     ${reference.jolie-js.jar}:\
-    ${file.reference.uri-templates.jar}
+    ${file.reference.uri-templates.jar}:\
+    ${file.reference.quartz-2.2.1.jar}:\
+    ${file.reference.quartz-jobs-2.2.1.jar}:\
+    ${file.reference.slf4j-api-1.6.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
