Clone only up to depth 1
Former-commit-id: f302b7f44c13cb301b4667830df277e971b70a58

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,14 +4,14 @@ FROM openjdk:alpine as JolieBuild
 RUN apk update
 RUN apk add apache-ant
 RUN apk add git
-RUN git clone https://github.com/jolie/jolie.git jolie-git
+RUN git clone --depth=1 https://github.com/jolie/jolie.git jolie-git
 WORKDIR /jolie-git
 RUN ant dist-install
 ENV JOLIE_HOME /usr/lib/jolie
 
 # Download and use the release tools to generate jolie_installer.jar
 WORKDIR /
-RUN git clone https://github.com/jolie/release_tools.git
+RUN git clone --depth=1 https://github.com/jolie/release_tools.git
 WORKDIR /release_tools/jolie_installer
 RUN ant jar
 WORKDIR /release_tools
