Remove one RUN command
Former-commit-id: f1e65a87c03d2794341ac4d22436b2cd46ba1e30

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,6 +22,5 @@ RUN jolie release.ol ../jolie-git
 FROM openjdk:alpine
 WORKDIR /
 COPY --from=JolieBuild /release_tools/release/jolie_installer.jar .
-RUN java -jar jolie_installer.jar -jh /usr/lib/jolie -jl /usr/bin
-RUN rm jolie_installer.jar
+RUN java -jar jolie_installer.jar -jh /usr/lib/jolie -jl /usr/bin && rm jolie_installer.jar
 ENV JOLIE_HOME /usr/lib/jolie
