--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -13,6 +13,7 @@ project.javascript=extensions/javascript
 project.btl2cap=extensions/btl2cap
 project.rmi=extensions/rmi
 project.soap=extensions/soap
+project.soaps=extensions/soaps
 project.sodep=extensions/sodep
 project.sodeps=extensions/sodeps
 project.jsonrpc=extensions/jsonrpc
