--- a/extensions/soaps/nbproject/project.properties
+++ b/extensions/soaps/nbproject/project.properties
@@ -33,7 +33,8 @@ manifest.file=manifest.mf
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
-    ${file.reference.jolie-ssl.jar}
+    ${reference.soap.jar}:\
+    ${reference.jolie-ssl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
