--- a/extensions/soaps/nbproject/project.properties
+++ b/extensions/soaps/nbproject/project.properties
@@ -62,7 +62,9 @@ javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
-project.jolie=../../../../jolie-master/jolie
+project.soap=../soap
+project.jolie=../../jolie
+project.jolie-ssl=../../lib/jolie-ssl
 reference.soap.jar=${project.soap}/dist/soap.jar
 reference.jolie-ssl.jar=${project.jolie-ssl}/dist/jolie-ssl.jar
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
