--- a/extensions/soaps/nbproject/project.properties
+++ b/extensions/soaps/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
-application.title=jolie-xml
-application.vendor=fmontesi
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -14,38 +14,40 @@ build.generated.sources.dir=${build.dir}/generated-sources
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
+# Uncomment to specify the preferred debugger connection transport:
+#debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
+# Files in build.classes.dir which should be excluded from distribution jar
+dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/jolie-xml.jar
+dist.jar=${dist.dir}/soaps.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.jolie-xml-src=src
-file.reference.wsdl4j.jar=../wsdl4j/wsdl4j.jar
+file.reference.jolie-ssl.jar=../../lib/jolie-ssl/dist/jolie-ssl.jar
 includes=**
+manifest.file=manifest.mf
 jar.compress=false
 javac.classpath=\
-    ${reference.libjolie.jar}:\
     ${reference.jolie.jar}:\
-    ${file.reference.wsdl4j.jar}:\
-    ${reference.xsom.jar}
+    ${reference.soap.jar}:\
+    ${reference.jolie-ssl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=false
+javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
+javac.test.processorpath=\
+    ${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -57,27 +59,25 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-main.class=
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
+project.soap=../soap
 project.jolie=../../jolie
-project.libjolie=../../libjolie
-project.xsom=../xsom
+project.jolie-ssl=../../lib/jolie-ssl
+reference.soap.jar=${project.soap}/dist/soap.jar
+reference.jolie-ssl.jar=${project.jolie-ssl}/dist/jolie-ssl.jar
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
-reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
-reference.xsom.jar=${project.xsom}/dist/xsom.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
+# Space-separated list of JVM arguments used when running the project.
+# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
+# To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.jolie-xml-src}
+src.dir=src
+test.src.dir=test
