--- a/tools/jolie2dummy/nbproject/private/private.properties
+++ b/tools/jolie2dummy/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/claudio/.netbeans/8.1/build.properties
+user.properties.file=/Users/fmontesi/Library/Application Support/NetBeans/8.2/build.properties
