--- a/buildconfig/config.properties
+++ b/buildconfig/config.properties
@@ -33,3 +33,4 @@ libs.c3p0-0.9.1.1=lib/quartz/c3p0-0.9.1.1.jar
 libs.quartz-2.2.1=lib/quartz/quartz-2.2.1.jar
 libs.quartz-jobs-2.2.1=lib/quartz/quartz-jobs-2.2.1.jar
 libs.slf4j-api-1.6.6=lib/quartz/slf4j-api-1.6.6.jar
+libs.jaf=lib/jaf/javax.activation.jar
