--- a/build.xml
+++ b/build.xml
@@ -351,6 +351,7 @@ Please make sure that:
 		<copy file="${libs.libmatthew.unix}" tofile="${dist.jolie}/lib/unix.jar"/>
 		<copy file="${libs.relaxngDatatype}" tofile="${dist.jolie}/lib/relaxngDatatype.jar"/>
 		<copy file="${libs.ini4j}" tofile="${dist.jolie}/lib/ini4j.jar"/>
+		<copy file="${libs.jaf}" tofile="${dist.jolie}/lib/jaf.jar"/>
 		<copy file="${libs.json}" tofile="${dist.jolie}/lib/json_simple.jar"/>
 		<copy file="${libs.servletapi5}" tofile="${dist.jolie}/lib/servletapi5.jar"/>
 		<copy file="${libs.wsdl4j}" tofile="${dist.jolie}/lib/wsdl4j.jar"/>
