--- a/javaServices/coreJavaServices/nbproject/project.properties
+++ b/javaServices/coreJavaServices/nbproject/project.properties
@@ -27,6 +27,7 @@ excludes=
 file.reference.c3p0-0.9.1.1.jar=../../lib/quartz/c3p0-0.9.1.1.jar
 file.reference.commons-lang3.jar=../../lib/commons-lang/commons-lang3.jar
 file.reference.ini4j.jar=../../lib/ini4j/ini4j.jar
+file.reference.javax.activation.jar=../../lib/jaf/javax.activation.jar
 file.reference.jolieJavaServices-src=src
 file.reference.mailapi.jar=../../lib/javamail/mailapi.jar
 file.reference.quartz-2.2.1.jar=../../lib/quartz/quartz-2.2.1.jar
@@ -59,7 +60,8 @@ javac.classpath=\
     ${file.reference.uri-templates.jar}:\
     ${file.reference.quartz-2.2.1.jar}:\
     ${file.reference.quartz-jobs-2.2.1.jar}:\
-    ${file.reference.slf4j-api-1.6.6.jar}
+    ${file.reference.slf4j-api-1.6.6.jar}:\
+    ${file.reference.javax.activation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
