Fix lib references
Former-commit-id: 81888e660160d462d854833bb2214bbcb00ee44f

--- a/extensions/soap/nbproject/project.properties
+++ b/extensions/soap/nbproject/project.properties
@@ -28,9 +28,9 @@ dist.jar=${dist.dir}/soap.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jaxb-api.jar=../../../jolie/lib/jaxb/jaxb-api.jar
-file.reference.jaxb-core.jar=../../../jolie/lib/jaxb/jaxb-core.jar
-file.reference.jaxb-impl.jar=../../../jolie/lib/jaxb/jaxb-impl.jar
+file.reference.jaxb-api.jar=../../lib/jaxb/jaxb-api.jar
+file.reference.jaxb-core.jar=../../lib/jaxb/jaxb-core.jar
+file.reference.jaxb-impl.jar=../../lib/jaxb/jaxb-impl.jar
 file.reference.soap-src=src
 file.reference.wsdl4j.jar=../../lib/wsdl4j/wsdl4j.jar
 includes=**
