--- a/test/extensions/private/WS-test/nbproject/project.properties
+++ b/test/extensions/private/WS-test/nbproject/project.properties
@@ -34,25 +34,25 @@ dist.jar=${dist.dir}/WS-test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.FastInfoset.jar=../../../../../jolie/lib/jaxws/FastInfoset.jar
-file.reference.gmbal-api-only.jar=../../../../../jolie/lib/jaxws/gmbal-api-only.jar
-file.reference.ha-api.jar=../../../../../jolie/lib/jaxws/ha-api.jar
-file.reference.javax.annotation-api.jar=../../../../../jolie/lib/jaxws/javax.annotation-api.jar
-file.reference.javax.xml.soap-api.jar=../../../../../jolie/lib/jaxws/javax.xml.soap-api.jar
-file.reference.jaxb-api.jar=../../../../../jolie/lib/jaxws/jaxb-api.jar
-file.reference.jaxb-core.jar=../../../../../jolie/lib/jaxws/jaxb-core.jar
-file.reference.jaxb-impl.jar=../../../../../jolie/lib/jaxws/jaxb-impl.jar
-file.reference.jaxws-api.jar=../../../../../jolie/lib/jaxws/jaxws-api.jar
-file.reference.jaxws-rt.jar=../../../../../jolie/lib/jaxws/jaxws-rt.jar
-file.reference.jsr181-api.jar=../../../../../jolie/lib/jaxws/jsr181-api.jar
-file.reference.management-api.jar=../../../../../jolie/lib/jaxws/management-api.jar
-file.reference.mimepull.jar=../../../../../jolie/lib/jaxws/mimepull.jar
-file.reference.policy.jar=../../../../../jolie/lib/jaxws/policy.jar
-file.reference.saaj-impl.jar=../../../../../jolie/lib/jaxws/saaj-impl.jar
-file.reference.stax-ex.jar=../../../../../jolie/lib/jaxws/stax-ex.jar
-file.reference.stax2-api.jar=../../../../../jolie/lib/jaxws/stax2-api.jar
-file.reference.streambuffer.jar=../../../../../jolie/lib/jaxws/streambuffer.jar
-file.reference.woodstox-core-asl.jar=../../../../../jolie/lib/jaxws/woodstox-core-asl.jar
+file.reference.FastInfoset.jar=../../../../lib/jaxws/FastInfoset.jar
+file.reference.gmbal-api-only.jar=../../../../lib/jaxws/gmbal-api-only.jar
+file.reference.ha-api.jar=../../../../lib/jaxws/ha-api.jar
+file.reference.javax.annotation-api.jar=../../../../lib/jaxws/javax.annotation-api.jar
+file.reference.javax.xml.soap-api.jar=../../../../lib/jaxws/javax.xml.soap-api.jar
+file.reference.jaxb-api.jar=../../../../lib/jaxws/jaxb-api.jar
+file.reference.jaxb-core.jar=../../../../lib/jaxws/jaxb-core.jar
+file.reference.jaxb-impl.jar=../../../../lib/jaxws/jaxb-impl.jar
+file.reference.jaxws-api.jar=../../../../lib/jaxws/jaxws-api.jar
+file.reference.jaxws-rt.jar=../../../../lib/jaxws/jaxws-rt.jar
+file.reference.jsr181-api.jar=../../../../lib/jaxws/jsr181-api.jar
+file.reference.management-api.jar=../../../../lib/jaxws/management-api.jar
+file.reference.mimepull.jar=../../../../lib/jaxws/mimepull.jar
+file.reference.policy.jar=../../../../lib/jaxws/policy.jar
+file.reference.saaj-impl.jar=../../../../lib/jaxws/saaj-impl.jar
+file.reference.stax-ex.jar=../../../../lib/jaxws/stax-ex.jar
+file.reference.stax2-api.jar=../../../../lib/jaxws/stax2-api.jar
+file.reference.streambuffer.jar=../../../../lib/jaxws/streambuffer.jar
+file.reference.woodstox-core-asl.jar=../../../../lib/jaxws/woodstox-core-asl.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
