--- a/tools/jolie2wsdl/nbproject/project.properties
+++ b/tools/jolie2wsdl/nbproject/project.properties
@@ -31,7 +31,7 @@ dist.jar=${dist.dir}/jolie2wsdl.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.wsdl4j.jar=../../../jolie/lib/wsdl4j/wsdl4j.jar
+file.reference.wsdl4j.jar=../../lib/wsdl4j/wsdl4j.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
