Don't copy libraries in jolie-js
Former-commit-id: b552f836bb177ab99c094b0f38d401d10d5169de

--- a/lib/jolie-js/nbproject/project.properties
+++ b/lib/jolie-js/nbproject/project.properties
@@ -43,6 +43,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
@@ -68,7 +69,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
 project.jolie=../../jolie
 project.libjolie=../../libjolie
