Don't copy libraries in WS-test

--- a/test/extensions/private/WS-test/nbproject/project.properties
+++ b/test/extensions/private/WS-test/nbproject/project.properties
@@ -129,7 +129,7 @@ manifest.custom.codebase=
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
 project.jolie=../../../../jolie
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
