copy libraries fixed
Former-commit-id: a15df5fbe42b30c07b687d5c14a2c501a9ff9bb6

--- a/lib/jolie-js/nbproject/private/private.properties
+++ b/lib/jolie-js/nbproject/private/private.properties
@@ -1,6 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+do.jlink=false
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/fmontesi/.netbeans/8.2/build.properties
+jlink.strip=false
+user.properties.file=/Users/stefanozingaro/Library/Application Support/NetBeans/9.0/build.properties
