--- a/jolie/nbproject/project.properties
+++ b/jolie/nbproject/project.properties
@@ -17,8 +17,12 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/jolie.jar
@@ -38,6 +42,8 @@ javac.classpath=\
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -47,9 +53,12 @@ javac.test.classpath=\
     ${build.classes.dir}:\
     ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -59,6 +68,8 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jlink.launcher=false
+jlink.launcher.name=jolie
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/home/fmontesi/programs/joliesvn/jolie/trunk/jolie/dist/
 jnlp.descriptor=application
@@ -88,8 +99,12 @@ run.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=-ea:jolie... -ea:joliex... -Djava.rmi.server.codebase=file:/./extensions/rmi.jar -cp ./lib/netty.jar:./lib/libjolie.jar:./jolie.jar
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=${file.reference.jolie-src}
