--- a/extensions/coap/nbproject/project.properties
+++ b/extensions/coap/nbproject/project.properties
@@ -38,9 +38,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
-    ${file.reference.netty.jar}:\
     ${reference.jolie-js.jar}:\
-    ${reference.jolie-xml.jar}
+    ${reference.jolie-xml.jar}:\
+    ${file.reference.netty.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,21 +61,23 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.netty.jar=../../lib/netty-all-4.1.17.Final-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=coap
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=true
-platform.active=default_platform
+platform.active=JDK_1.8
 project.jolie=../../jolie
 project.jolie-js=../../lib/jolie-js
 project.jolie-xml=../../lib/jolie-xml
@@ -97,6 +99,5 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-source.reference.netty.jar=../../lib/netty-all-4.1.17.Final-sources.jar
 src.dir=src
 test.src.dir=test
