--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -30,3 +30,7 @@ project.jolie2surface=tools/jolie2surface
 project.jolie2wsdl=tools/jolie2wsdl
 project.joliedoc=tools/joliedoc
 project.wsdl2jolie=tools/wsdl2jolie
+project.datagram=extensions/datagram
+project.coap=extensions/coap
+project.mqtt=extensions/mqtt
+project.pubsubchannel=extensions/pubsubchannel
