--- a/extensions/http/nbproject/project.properties
+++ b/extensions/http/nbproject/project.properties
@@ -16,8 +16,12 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/http.jar
@@ -41,6 +45,8 @@ javac.classpath=\
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -50,6 +56,8 @@ javac.test.classpath=\
     ${build.classes.dir}:\
     ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -84,8 +92,12 @@ run.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=${file.reference.http-src}
