java 1.8 in properties

--- a/jolie/nbproject/project.properties
+++ b/jolie/nbproject/project.properties
@@ -63,6 +63,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.netty.jar=/Users/stefanozingaro/Code/java/netty-4.1.30.Final/javadoc/netty-all-4.1.30.Final-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -88,7 +89,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.libjolie=../libjolie
 project.license=lgpl21
 reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
@@ -107,4 +108,5 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.netty.jar=/Users/stefanozingaro/Code/java/netty-4.1.30.Final/jar/all-in-one/netty-all-4.1.30.Final-sources.jar
 src.dir=${file.reference.jolie-src}
