CoAP protocol now integrated with Jolie supporting correalation with id and token, plus separate responses behavior
Former-commit-id: f8f20a385d5d7dc38a439dd924bc75bd114c45f5

--- a/extensions/coap/nbproject/project.properties
+++ b/extensions/coap/nbproject/project.properties
@@ -40,7 +40,8 @@ javac.classpath=\
     ${reference.jolie.jar}:\
     ${reference.jolie-js.jar}:\
     ${reference.jolie-xml.jar}:\
-    ${file.reference.netty.jar}
+    ${file.reference.netty.jar}:\
+    ${reference.libjolie.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -81,9 +82,11 @@ platform.active=JDK_1.8
 project.jolie=../../jolie
 project.jolie-js=../../lib/jolie-js
 project.jolie-xml=../../lib/jolie-xml
+project.libjolie=../../libjolie
 reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
 reference.jolie-xml.jar=${project.jolie-xml}/dist/jolie-xml.jar
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
+reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
