correcting some bug in install process of docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,6 +5,6 @@ RUN apk add apache-ant
 RUN apk add git
 RUN git clone https://github.com/saltgz/jolie.git jolie-git
 WORKDIR /jolie-git
-RUN ant && ant install
+RUN ant -Dplatforms.JDK_1.8.home=/usr/lib/jvm/java-1.8-openjdk/ dist-install
 ENV JOLIE_HOME /usr/local/lib/jolie
 WORKDIR /home
