banished private folder pubsubchannel
Former-commit-id: f9891aa469b7ae2467a60bc1fc7e41af14f579f8

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ build
 /extensions/mqtt/nbproject/private/
 /extensions/pubsubchannel/nbproject/private/
 /extensions/coap/nbproject/private/
+extensions/pubsubchannel/nbproject/private
