opening on netbeans, this is the last time i use thi IDE. goodbye cruel hello world
Former-commit-id: b190baa671de6c9a68bbd3c1c58e6dfd400f5e82

--- a/jolie/nbproject/project.properties
+++ b/jolie/nbproject/project.properties
@@ -46,8 +46,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -89,7 +89,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 project.libjolie=../libjolie
 project.license=lgpl21
 reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
