--- a/tools/jolie2dummy/nbproject/private/private.properties
+++ b/tools/jolie2dummy/nbproject/private/private.properties
@@ -1,1 +1,8 @@
-user.properties.file=/home/fmontesi/.netbeans/8.2/build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=/home/fmontesi/build.properties
