--- a/tools/jolie2surface/nbproject/private/private.properties
+++ b/tools/jolie2surface/nbproject/private/private.properties
@@ -2,6 +2,8 @@ application.args=-i "C:/Programmi32/jolie/include"  "C:/REPOS/REPOS_SVN_WC2/joli
 compile.on.save=false
 do.depend=false
 do.jar=true
+do.jlink=false
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/fmontesi/.netbeans/8.2/build.properties
+jlink.strip=false
+user.properties.file=/home/fmontesi/build.properties
