some netbeans project missing files

--- a/extensions/coap/nbproject/private/private.properties
+++ b/extensions/coap/nbproject/private/private.properties
@@ -1,1 +1,8 @@
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=/Users/stefanozingaro/Library/Application Support/NetBeans/9.0/build.properties
