--- a/extensions/https/nbproject/project.properties
+++ b/extensions/https/nbproject/project.properties
@@ -1,3 +1,9 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
+application.title=https
+application.vendor=stefanopiozingaro
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -20,6 +26,7 @@ debug.test.modulepath=\
 dist.dir=dist
 dist.jar=${dist.dir}/https.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.gwt-servlet.jar=../../lib/gwt/gwt-servlet.jar
 file.reference.http-src=src
@@ -33,10 +40,13 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
-javac.source=1.6
-javac.target=1.6
+javac.processorpath=\
+    ${javac.classpath}
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -47,6 +57,7 @@ javac.test.modulepath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -56,10 +67,13 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jlink.launcher=false
+jlink.launcher.name=https
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+mkdist.disabled=false
+platform.active=JDK_1.8
 project.http=../http
 project.jolie=../../jolie
 project.jolie-ssl=../../lib/jolie-ssl
