--- a/extensions/datagram/nbproject/project.properties
+++ b/extensions/datagram/nbproject/project.properties
@@ -33,13 +33,11 @@ dist.jar=${dist.dir}/datagram.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.netty.jar=../../dist/jolie/lib/netty.jar
 file.reference.netty.jar-1=../../lib/netty/netty.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
-    ${file.reference.netty.jar}:\
     ${file.reference.netty.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -49,8 +47,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=11
-javac.target=11
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -75,7 +73,7 @@ jlink.launcher.name=datagram
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=default_platform
+platform.active=JDK_1.8
 project.jolie=../../jolie
 project.license=gpl30
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
