testing coap and mqtt files removed

--- a/extensions/pubsubchannel/nbproject/project.properties
+++ b/extensions/pubsubchannel/nbproject/project.properties
@@ -62,6 +62,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.netty.jar=/Users/stefanozingaro/Code/java/netty-4.1.30.Final/javadoc/netty-all-4.1.30.Final-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
