After this commit, jdk for mqtt changed

--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -96,7 +96,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.jolie=../../jolie
 project.jolie-js=../../lib/jolie-js
 project.jolie-xml=../../lib/jolie-xml
