removed thesave https

--- a/extensions/https/nbproject/project.properties
+++ b/extensions/https/nbproject/project.properties
@@ -3,11 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 application.title=https
-<<<<<<< HEAD
-application.vendor=stefanopiozingaro
-=======
-application.vendor=thesave
->>>>>>> upstream/next
+application.vendor=fmontesi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
