--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: java
 
 before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install ant
+  - wget --no-check-certificate https://www.apache.org/dist/ant/binaries/apache-ant-1.10.5-bin.tar.gz
+  - tar -xzvf apache-ant-1.10.5-bin.tar.gz
+  - export PATH=`pwd`/apache-ant-1.10.5/bin:$PATH
+  - echo $(ant -version)
 
 script: ant dist && ant test
 
