--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -22,6 +22,7 @@ project.local=extensions/local
 project.metaservice-java=support/metaservice-java
 project.coreJavaServices=javaServices/coreJavaServices
 project.monitorJavaServices=javaServices/monitorJavaServices
+project.tqueryJavaServices=javaServices/tqueryJavaServices
 project.jolie2plasma=tools/jolie2plasma
 project.joliec=tools/joliec
 project.jolie2java=tools/jolie2java
