copylibs dependency removed, plus some cleaning of junit tests in nb projects
Former-commit-id: ebf01ffb68d15933f1c0c409bf1487cbd5685bcb

--- a/extensions/rmi/nbproject/project.properties
+++ b/extensions/rmi/nbproject/project.properties
@@ -46,9 +46,7 @@ javac.source=11
 javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javac.test.modulepath=\
     ${javac.modulepath}
 javadoc.additionalparam=
