--- a/extensions/soap/nbproject/project.properties
+++ b/extensions/soap/nbproject/project.properties
@@ -60,8 +60,7 @@ javac.source=11
 javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javac.test.modulepath=\
     ${javac.modulepath}
 javadoc.additionalparam=
