--- a/support/metaservice-java/nbproject/project.properties
+++ b/support/metaservice-java/nbproject/project.properties
@@ -46,9 +46,7 @@ javac.source=11
 javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javac.test.modulepath=\
     ${javac.modulepath}
 javadoc.additionalparam=
