removing xsom support to jolie2wsdl

--- a/tools/jolie2wsdl/nbproject/project.properties
+++ b/tools/jolie2wsdl/nbproject/project.properties
@@ -31,18 +31,15 @@ dist.jar=${dist.dir}/jolie2wsdl.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jolie.jar=..\\..\\jolie\\dist\\jolie.jar
 file.reference.wsdl4j.jar=..\\..\\lib\\wsdl4j\\wsdl4j.jar
-file.reference.xsom.jar=..\\..\\lib\\xsom\\dist\\xsom.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jolie.jar}:\
     ${file.reference.wsdl4j.jar}:\
-    ${file.reference.xsom.jar}:\
-    ${reference.libjolie.jar}
+    ${reference.libjolie.jar}:\
+    ${reference.jolie.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,7 +82,9 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.jolie=../../jolie
 project.libjolie=../../libjolie
+reference.jolie.jar=${project.jolie}/dist/jolie.jar
 reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
 run.classpath=\
     ${javac.classpath}:\
