--- a/javaServices/tqueryJavaServices/nbproject/project.properties
+++ b/javaServices/tqueryJavaServices/nbproject/project.properties
@@ -1,12 +1,22 @@
 #Thu Dec 13 19:12:30 CET 2018
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=4
 excludes=
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}
-run.classpath=${javac.classpath}\:${build.classes.dir}
-javac.processorpath=${javac.classpath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+project.jolie-js=../../lib/jolie-js
+project.libjolie=../../libjolie
+reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
+reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+javac.processorpath=\
+    ${javac.classpath}
 dist.javadoc.dir=${dist.dir}/javadoc
 test.src.dir=test
-run.modulepath=${javac.modulepath}
+run.modulepath=\
+    ${javac.modulepath}
 annotation.processing.enabled=true
 build.sysclasspath=ignore
 debug.modulepath=${run.modulepath}
@@ -45,10 +55,14 @@ run.jvmargs=
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab=4
 jlink.additionalmodules=
 javadoc.encoding=${source.encoding}
-javac.classpath=${reference.jolie.jar}
+javac.classpath=\
+    ${reference.jolie.jar}:\
+    ${reference.libjolie.jar}:\
+    ${reference.jolie-js.jar}
 mkdist.disabled=false
 project.license=default
-run.test.modulepath=${javac.test.modulepath}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
 dist.jlink.dir=${dist.dir}/jlink
 dist.jar=${dist.dir}/tqueryJavaServices.jar
@@ -65,7 +79,8 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 build.generated.dir=${build.dir}/generated
 javadoc.version=false
 application.title=tqueryJavaServices
-javac.test.modulepath=${javac.modulepath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 auxiliary.org-netbeans-modules-editor-indent.text.x-java.CodeStyle.project.text-limit-width=80
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
@@ -79,11 +94,13 @@ auxiliary.org-netbeans-modules-editor-indent.text.x-java.CodeStyle.project.inden
 javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
 meta.inf.dir=${src.dir}/META-INF
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 dist.jlink.output=${dist.jlink.dir}/tqueryJavaServices
 annotation.processing.run.all.processors=true
 javac.modulepath=
 src.dir=src
 jlink.additionalparam=
-project.jolie=../../../jolie_main/jolie
+project.jolie=../../jolie
 debug.classpath=${run.classpath}
