corrected multipart email and added proto SMTP server

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ build/
 /jolie/.idea/tasks.xml
 /extensions/soaps/nbproject/private/
 /extensions/auto/nbproject/private/
+/lib/jolie-email/nbproject/private/
