Doc for converter. JAP more powerful in solving deps now.
Former-commit-id: e9496efe3ad42e49541c0372e18b9e8617161725

--- a/tools/jolie2surface/nbproject/project.properties
+++ b/tools/jolie2surface/nbproject/project.properties
@@ -1,4 +1,4 @@
-#Thu Feb 28 10:40:59 CET 2019
+#Mon Mar 18 15:30:29 CET 2019
 jnlp.offline-allowed=false
 javadoc.splitindex=true
 build.classes.excludes=**/*.java,**/*.form
@@ -19,8 +19,8 @@ jnlp.signed=false
 reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
 javadoc.html5=false
 test.src.dir=test
-junit.selected.version=4
 jar.archive.disabled=${jnlp.enabled}
+junit.selected.version=3
 includes=**
 application.vendor=jolie
 mkdist.disabled=true
@@ -69,17 +69,12 @@ javac.modulepath=
 jlink.launcher.name=jolie2surface
 javac.processorpath=${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
-endorsed.classpath=
 javadoc.use=true
+endorsed.classpath=
 javadoc.nonavbar=false
 jnlp.signing.alias=
 javadoc.windowtitle=
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 src.dir=src
 debug.classpath=${run.classpath}
 jnlp.enabled=false
