--- a/libjolie/nbproject/project.properties
+++ b/libjolie/nbproject/project.properties
@@ -54,6 +54,7 @@ javac.test.modulepath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -63,6 +64,8 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jlink.launcher=false
+jlink.launcher.name=libjolie
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
