--- a/extensions/rmi/nbproject/project.properties
+++ b/extensions/rmi/nbproject/project.properties
@@ -1,77 +1,59 @@
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
-debug.test.classpath=\
-    ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/rmi.jar
-dist.javadoc.dir=${dist.dir}/javadoc
+#Tue Apr 16 16:06:27 CEST 2019
 excludes=
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${reference.jolie.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
 javac.deprecation=false
-javac.modulepath=
-javac.processormodulepath=
-javac.source=1.6
+build.test.results.dir=${build.dir}/test/results
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javadoc.nonavbar=false
+javac.test.modulepath=${javac.modulepath}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 javac.target=1.6
+javadoc.noindex=false
+javac.processormodulepath=
+javadoc.additionalparam=
+includes=**
+build.classes.dir=${build.dir}/classes
+source.encoding=UTF-8
+javadoc.author=false
+test.src.dir=test
+reference.jolie.jar=${project.jolie}/dist/jolie.jar
+build.dir=build
+build.test.classes.dir=${build.dir}/test/classes
+run.modulepath=${javac.modulepath}
+platform.active=default_platform
+javac.compilerargs=
+dist.jar=${dist.dir}/rmi.jar
+javadoc.use=true
+build.sysclasspath=ignore
+debug.test.classpath=${run.test.classpath}
+dist.dir=dist
+build.classes.excludes=**/*.java,**/*.form
+javadoc.encoding=${source.encoding}
+javadoc.splitindex=true
+javac.source=1.6
+javac.modulepath=
+junit.selected.version=4
+debug.classpath=${run.classpath}
+run.jvmargs=
+run.test.modulepath=${javac.test.modulepath}
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+build.generated.dir=${build.dir}/generated
+jar.compress=false
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
-javac.test.modulepath=\
-    ${javac.modulepath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
+debug.test.modulepath=${run.test.modulepath}
+meta.inf.dir=${src.dir}/META-INF
+manifest.file=manifest.mf
+dist.javadoc.dir=${dist.dir}/javadoc
+src.dir=src
+debug.modulepath=${run.modulepath}
+javac.classpath=${reference.jolie.jar}
+project.jolie=../../jolie
+build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
-jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
-project.jolie=../../jolie
-reference.jolie.jar=${project.jolie}/dist/jolie.jar
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
-source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+javadoc.notree=false
