# Added two classes: LSPParser and LSPMessage that that are used in

--- a/extensions/jsonrpc/nbproject/project.properties
+++ b/extensions/jsonrpc/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 application.title=jsonrpc
 application.vendor=fmontesi
@@ -27,6 +28,8 @@ dist.jar=${dist.dir}/jsonrpc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-text-1.6.jar=../../dist/jolie/lib/commons-text-1.6.jar
+file.reference.json_simple.jar=../../dist/jolie/lib/json_simple.jar
 file.reference.sodep-src=src
 includes=**
 jar.compress=false
@@ -34,16 +37,19 @@ javac.classpath=\
     ${reference.jolie.jar}:\
     ${reference.libjolie.jar}:\
     ${reference.http.jar}:\
-    ${reference.jolie-js.jar}
+    ${reference.jolie-js.jar}:\
+    ${file.reference.commons-text-1.6.jar}:\
+    ${file.reference.json_simple.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -54,6 +60,7 @@ javac.test.modulepath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -63,6 +70,8 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jlink.launcher=false
+jlink.launcher.name=jsonrpc
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
