--- a/extensions/jsonrpc/nbproject/project.properties
+++ b/extensions/jsonrpc/nbproject/project.properties
@@ -28,8 +28,6 @@ dist.jar=${dist.dir}/jsonrpc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-text-1.6.jar=../../dist/jolie/lib/commons-text-1.6.jar
-file.reference.json_simple.jar=../../dist/jolie/lib/json_simple.jar
 file.reference.sodep-src=src
 includes=**
 jar.compress=false
@@ -37,9 +35,7 @@ javac.classpath=\
     ${reference.jolie.jar}:\
     ${reference.libjolie.jar}:\
     ${reference.http.jar}:\
-    ${reference.jolie-js.jar}:\
-    ${file.reference.commons-text-1.6.jar}:\
-    ${file.reference.json_simple.jar}
+    ${reference.jolie-js.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
