add jolie2dummy private to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /support/jolie-gwt/nbproject/private/
 /support/jolie-java/nbproject/private/
 /support/metaservice-java/nbproject/private/
+/tools/jolie2dummy/nbproject/private/
 /tools/jolie2java/nbproject/private/
 /tools/jolie2plasma/nbproject/private/
 /tools/jolie2wsdl/nbproject/private/
